--- a/Best_Numpy_Functions_For_Data_Science.ipynb
+++ b/Best_Numpy_Functions_For_Data_Science.ipynb
@@ -19,7 +19,8 @@
     },
     "colab": {
       "name": "Best Numpy Functions For Data Science",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat_minor": 0,
@@ -27,8 +28,17 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "<center> <img src='https://miro.medium.com/max/765/1*cyXCE-JcBelTyrK-58w6_Q.png'/></center>\n",
+        "<a href=\"https://colab.research.google.com/github/technicalDivination/Python/blob/main/Best_Numpy_Functions_For_Data_Science.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "<center><h2>Best Numpy Functions For Data Science </h2></center>\n",
         "\n",
         "Numpy stands for numerical python and is a library in python that adds the functionality of large multi-dimensional arrays and matrices. It works as a building block for all the libraries in pydata ecosystem. Numpy is one of the most useful tools for a data scientist that uses python. It can handle large-size data efficiently. One of the biggest reasons to use NumPy is its arrays and multiple scientific functions to work with arrays.\n",
